# world-engine

./: .gitignore  PROTOCOL_VERSION  README.md  pyproject.toml  requirements.txt  setup.sh
canon/: __init__.py  canon_io.py  contract.py  decision.py  diff.py  gate.py  project_store.py
canon/tests/: test_canon_decision.py  test_canon_gate.py  test_canon_snapshot.py  test_project_store.py  test_wave3_canon_contract.py
tests/contract_vectors/canon_gate/: test_canon_gate_vectors.py
tests/contract_vectors/canon_gate/fixtures/: allow_shotlist.json  deny_shotlist.json
tests/contract_vectors/canon_gate/goldens/: allow_canon_decision.json  deny_canon_decision.json
world_engine/: __init__.py  cli.py  contract_validate.py  schema_loader.py  story_draft_validator.py  validator.py  verify.py
world_engine/adaptation/: __init__.py  adapter.py  emotional_tagger.py  models.py  shot_templates.py  timing.py
world_engine/examples/: script_v1_example.json  shotlist_v1_example.json
world_engine/schemas/: __init__.py  canon_snapshot_v1.py  script_v1.py  shotlist.schema.json  shotlist_v1.py
world_engine/tests/: test_cli_validate_story_draft.py  test_contract_runtime.py  test_story_draft_validator.py  test_validate_script.py
world_engine/tests/adaptation/: test_adapter.py  test_determinism.py  test_models.py  test_sha256_fixtures.py  test_timing.py  test_wave3_contract.py  test_wave4_vector_contract.py  test_wave6_canon_snapshot.py
world_engine/tests/contract_vectors/shotlist/: fixture_a.json  (+2 more)
world_engine/tests/schemas/: test_script_schema.py  test_shotlist_schema.py
