[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-engine"
version = "0.1.0"
description = "Automated Narrative → Video System — World Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["world_engine*"]

[tool.pytest.ini_options]
testpaths = ["world_engine/tests", "canon/tests", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
